Changed header background

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,9 +12,10 @@ body{
 }
 
 header{
-    background: #8E2DE2;
+    /* background: #8E2DE2;
     background: -webkit-linear-gradient(to right, #4A00E0, #8E2DE2);
-    background: linear-gradient(to right, #4A00E0, #8E2DE2);
+    background: linear-gradient(to right, #4A00E0, #8E2DE2); */
+    background: palevioletred;
     color: #fff;
 }
 
